
5.2a4 -> 5.2b1:
    - proyvind: rpmhash: add htGetKeys() for retrieving the keys of the hash table.
    - proyvind: rpmsyck: clean up, use rpmioPool and add destructor.
    - proyvind: remove %distepoch from %provideversion as it will break
	compatibility with rpm <= 4.5.
    - proyvind: rpm4compat: add a wrapper function for headerFormat().
    - jbj: mire: handle items from _mirePool like all other pools.
    - jbj: rpmds: dereference/flush global items earlier, before pool teardown.
    - jbj: rpmds: use _rpmdsPool, not heap, for rpmdsThis/rpmdsSingle as well.
    - jbj: rpmds: fix: rpmdsThis/rpmdsSingle assume ds->i = 0
	(i.e. actively iterating).
    - bero: adjust find-debuginfo.sh to new location of debugedit
    - jbj: don't reset to -O0 with --enable-build-debug and GCC.
    - jbj: grep: fix: don't segfault if no usage mutex or pool attached.
    - rse: align semantics of Lua function rpm.hostname() with the C API function buildHost()
    - proyvind: cpuinfo: move out cpuinfo feature dependencies to YAML.
    - proyvind: rpmsyck: first shot at YAML parser in pure C.
    - proyvind: get rid of parallel %___NVRDA macro, just merge it with %___NVRA in stead.
    - jbj: add RPMSENSE_RPMLIB to new tracking dependencies. at least its
	consistent even if useless.
    - jbj: fix: rpmdsMerge() shouldn't leave a result that seems to have
	active iteration in progress. There are side effects from macro
	expanding {N,EVR} that aren't correct.
    - proyvind: cpuinfo: change name of '%_prefer_buildarchs' macro to '%_prefer_target_cpu'.
    - proyvind: cpuinfo: change delimiter for %_prefer_buildarchs from ':' to ' '.
    - jbj: js: add AutoFu to build --with-js=internal.
    - jbj: ruby: fix: global interpreter with contained object refcnts needs
	early cleanup in rpmcliFini(), not in rpmioClean().
    - proyvind: cpuinfo: allow to enable from configure again since it's usable
	now. (although still room for improvements...)