@@ -1,5 +1,7 @@
 
 5.2a4 -> 5.2b1:
+    - proyvind: make it possible to set macro files to load predefines from by
+	defining PREMACROFILES at build time.
     - proyvind: rpmhash: add htGetKeys() for retrieving the keys of the hash table.
     - proyvind: rpmsyck: clean up, use rpmioPool and add destructor.
     - proyvind: remove %distepoch from %provideversion as it will break
